--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-# Welcome to my rare books cataloging site!
-This website gathers information to train catalogers to catalog rare books. It presumes some previous knowledge of cataloging for libraries but does not assume any prior knowledge of cataloging rare books. Whether you're brand new to rare books cataloging or looking for a refresher, this is a great place to start!
-## What is a rare book?
-## I'd really like to take an in-person class. What do you recommend?
-## About the author
+<h1>Welcome to my rare books cataloging site!</h1>
+<p>This website gathers information to train catalogers to catalog rare books. It presumes some previous knowledge of cataloging for libraries but does not assume any prior knowledge of cataloging rare books. Whether you're brand new to rare books cataloging or looking for a refresher, this is a great place to start!</p>
+<h2>What is a rare book?</h2>
+<h2>I'd really like to take an in-person class. What do you recommend?</h2>
+<h2>About the author</h2>
 This site was created by Elizabeth Hobart, a cataloger at Penn State. Elizabeth has been a rare materials cataloger since 2009 and served as chief/co-chief editor of *Descriptive Cataloging of Rare Materials (RDA Edition)* (DCRMR) from 2019 through 2022. She received her MLS from Indiana University in 2009. After graduating, she worked as Sr. Retrospective Conversion and Special Projects Cataloger at the Lilly Library until December 2010. She then moved to UNC-Chapel Hill, where she was first Special Projects Cataloger and then Special Collections and Humanities Cataloger. In 2016, she started a new role as Special Collections Cataloging Librarian at Penn State. Since 2022, she has been the interim head of Cataloging and Metadata Services at Penn State.
 Since completing her term as chief editor of DCRMR, Elizabeth has been actively engaged in teaching catalogers to catalog rare materials using the official RDA Toolkit and DCRMR. She has delivered four webinars for ALA on this topic and co-taught in-person workshops in Bloomington, Indiana, and London, England.
 Elizabeth is an ardent supporter of Rare Book School and encourages everyone able to attend a course there. However, the price tag and commitment to a week-long training put Rare Book School out of reach for many. This website is intended to serve as a source of information for anyone hoping to get started with rare book cataloging but who may be unable to attend an in-person course.
